--- a/css/master.css
+++ b/css/master.css
@@ -14,6 +14,6 @@
     font-family: proxiNova-light;
     src: url(../assets/fonts/ProximaNova-Light.otf);
 }
-html {
+body {
     font-family: proxiNova-reg;
 }
